# MSST-WebUI

./: .env  .gitignore  README.md  app.py  comfy_infer.py  dataset.py  inference.py  msst_inference.py  nuitka_pack.py  pyproject.toml  requirements-uv.txt  requirements.txt  run_with_env.sh  train.py  train_accelerate.py  utils.py  uvr_inference.py  valid.py  webUI.py  webUI_for_colab.ipynb  webview-gui.py
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: stale-issues.yml
ComfyGUI/editor/: config.py  edge.py  editor.py  main.py  node.py  node_port.py  scene.py  view.py
ComfyUI/: nuitka_pack.py
ComfyUI/DownloadManager/: download_manager.py  fix_JP.py  main.py
ComfyUI/Editor/: editor.py  main.py
audio_separator/separator/: common_separator.py  separator.py
audio_separator/utils/: cli.py
configs_backup/: augmentations_template.yaml  config_dnr_bandit_v2_mus64.yaml  config_some.yaml  config_vocals_mel_band_roformer_kj_sdr_10.98.yaml  config_vocals_scnet.yaml  config_vocals_scnet_large.yaml
configs_backup/config_musdb18/: config_musdb18_mel_band_roformer.yaml  config_musdb18_scnet.yaml  config_musdb18_scnet_large.yaml
configs_backup/multi_stem_models/: HTDemucs4_6stems.th.yaml  aufr33-jarredou_DrumSep_model_mdx23c_ep_141_sdr_10.8059.ckpt.yaml  aufr33-jarredou_DrumSep_model_mdx23c_ep_141_sdr_10.8059.yaml  bs_roformer_4stems_ft.ckpt.yaml  config_bs_roformer_4stems_ft.yaml  config_drumsep.yaml  config_htdemucs_6stems.yaml  config_musdb18_scnet.yaml  config_scnet_large.yaml  model_bandit_plus_dnr_sdr_11.47.chpt.yaml  model_drumsep.th.yaml  model_mdx23c_ep_168_sdr_7.0207.ckpt.yaml  model_scnet_sdr_9.3244.ckpt.yaml  scnet_checkpoint_musdb18.ckpt.yaml
configs_backup/single_stem_models/: Apollo_LQ_MP3_restoration.ckpt.yaml  HTDemucs4_FT_bass.th.yaml  apollo_model_uni.ckpt.yaml  aspiration_mel_band_roformer_less_aggr_sdr_18.1201.ckpt.yaml  config_apollo.yaml  (+27 more)
data_backup/: AppConfig.json  download_checks.json  language.json  model_map.json  models_info.json  msst_model_map.json  version.json  vr_model.json  vr_model_data.json  vr_model_map.json  webui_config.json
docs/: README_ko.md  README_zh.md  ensemble.md  inference.md  training.md  webui.md
inference/: comfy_infer.py  infer_tool.py  msst.py  msst_cli.py  msst_infer.py  preset_infer.py  vr.py  vr_cli.py  vr_infer.py
modules/: demucs4ht.py  ex_bi_mamba2.py  mdx23c_tfc_tdf_v3.py  segm_models.py  torchseg_models.py  ts_bs_mamba2.py  upernet_swin_transformers.py
scripts/: ensemble_audio_cli.py  ensemble_cli.py  msst_cli.py  preset_infer_cli.py  some_cli.py  vr_cli.py
themes/: theme_schema@1.0.0.json  theme_schema@1.1.0.json  theme_schema@1.2.0.json  theme_schema@1.2.1.json
train/: train.py  train_accelerate.py  valid.py
utils/: constant.py  dataset.py  ensemble.py  logger.py  update_config.py  utils.py
webui/: app.py  ensemble.py  file_manager.py  init.py  models.py  msst.py  preset.py  settings.py  setup.py  tools.py  train.py  utils.py  vr.py
(+314 files in other folders)
