[project]
name = "MSST-WebUI"
version = "1.7.0"
description = "This is a webUI for Music-Source-Separation-Training (MSST), which is a repository for training models for music source separation."
readme = "README.md"
authors = [
]
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 200

[tool.ruff.format]
indent-style = "tab"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false